--- a/views/users.ejs
+++ b/views/users.ejs
@@ -11,8 +11,8 @@
             </tr>
             <% users.forEach(function(user){ %>
                 <tr>
-                    <td><%- user.name %></td>
-                    <td><%- user.email %></td>
+                    <td><%= user.name %></td>
+                    <td><%= user.email %></td>
                 </tr>
             <% }); %>
         </Table>
