--- a/views/run.ejs
+++ b/views/run.ejs
@@ -9,7 +9,7 @@
         <input type="text" name="command" placeholder="Enter PowerShell command">
         <input type="submit" value="Run">
     </form>
-    <div id="command-output"></div>
+    <pre><div id="command-output"></div></pre>
     
     <script>
     $(document).ready(function(){
